fix button appearance in dark mode

--- a/_sass/layout/_forms.scss
+++ b/_sass/layout/_forms.scss
@@ -79,8 +79,8 @@ select {
   width: 100%;
   padding: 0.25em;
   margin-bottom: 0.5em;
-  color: var(--global-text-color);
-  background-color: #fff;
+  color: var(--global-input-text-color);
+  background-color: var(--global-input-background-color);
   border: 1px solid mix(#fff, #000, 80%);
   border-radius: $border-radius;
   box-shadow: $box-shadow;
